--- a/styles/Style.css
+++ b/styles/Style.css
@@ -1,82 +1,75 @@
-body, html {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: sans-serif;
-  }
-  
-  h1 {
-    font-family: "Lovers Quarrel", cursive;
-    font-weight: 400;
-    font-style: normal;
-  }
+/* Reset */
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 
-  .parallax, .parallax2 {
-    background-attachment: fixed;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    height: 100vh;
-    margin: 0;
-    padding: 0;
-  }
-  
-  .parallax {
-    background-image: url('../img/stars.jpg'); 
-    background-attachment: fixed;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    color: rgb(255, 255, 255);
-  }
-  
-  .parallax h1 {
-    font-size: clamp(4rem, 5vw, 8rem);
-    text-align: center;
-  }
+html, body {
+  height: 100%;
+  font-family: sans-serif;
+  background-color: #f5f5f5;
+  color: white;
+  scroll-behavior: smooth;
+}
 
-  .parallax p {
-    font-size: 2em;
-    text-align: center;
-  }
-  
-  .parallax2 {
-    background-image: url('../img/plane.jpg');
-    background-attachment: fixed;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    height: 100vh;
-    position: relative;
-    justify-content: center;
-    align-items: center;
-    color: rgb(255, 255, 255); 
-  }
+/* Section Parallax */
+.parallax {
+  height: 100vh;
+  background-image: url('../img/stars.jpg');
+  background-size: cover;
+  background-position: center;
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+}
 
-  .overlay {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    color: white;
-    text-align: center;
-  }
-  
-  
-  .parallax2 h2 {
-    font-size: 3em;
-    text-align: center;
-  }
+/* Masque sombre */
+.parallax::before,
+.parallax2::before {
+  content: "";
+  position: absolute;
+  top: 0; left: 0;
+  width: 100%; height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  z-index: 1;
+}
 
-  .parallax2 p {
-    font-size: 2em;
-    text-align: center;
-  }
+.overlay {
+  position: relative;
+  z-index: 2;
+  padding: 20px;
+  max-width: 800px;
+}
 
- 
-  
-  
+h1 {
+  font-family: "Fleur De Leah", cursive;
+  font-size: clamp(4rem, 8vw, 8rem);
+  margin-bottom: 10px;
+}
+
+p {
+  font-family: "Grandiflora One", cursive;
+  font-size: clamp(1.2rem, 3vw, 2rem);
+  line-height: 1.4;
+}
+
+/* Deuxième section */
+.parallax2 {
+  height: 100vh;
+  background-image: url('../img/plane.jpg'); /* à personnaliser */
+  background-size: cover;
+  background-position: center;
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+}
+h2 {
+  font-family: "Grandiflora One", cursive;
+  font-size: clamp(4rem, 8vw, 8rem);
+  margin-bottom: 10px;
+}
